updating for class 1

--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Class 1"
-date:   2016-01-11
+date:   2016-01-10
 categories: notes
 permalink: class-1
 ---
@@ -17,7 +17,7 @@ permalink: class-1
 
 # CLASS NOTES
 
-**CSS** - controls how a page looks
+<!-- **CSS** - controls how a page looks
 
 **JAVASCRIPT** - controls how a page behaves
 
@@ -35,7 +35,7 @@ HTML is made up of tags. Tags give information about the content and display of 
 {% endhighlight %}
 
 # The Skeletal System
-There are a few main tags that every web page must have. They are <html>,<head>,<title>, and <body>. So the very simplest web page looks like this in text view:
+There are a few main tags that every web page must have - html, head, title, and body. The very simplest web page looks like this in text view:
 
 {% highlight ruby %}
 <!DOCTYPE HTML>
@@ -48,7 +48,7 @@ There are a few main tags that every web page must have. They are <html>,<head>,
   <p>Some information here.</p>
  </body>
 </html>
-{% endhighlight %}
+{% endhighlight %} -->
 
 
 
@@ -58,9 +58,7 @@ There are a few main tags that every web page must have. They are <html>,<head>,
 
 <br>
 
-## HOMEWORK 
-
-#'Hello World'
+# ASSIGNMENT #1: 'Hello World'
 Create a basic one page html document that displays "hello world" and make it live on the web. Save your page as hello-world.html.
 
 Download a code editor, an FTP client, and the CU VPN client. Follow [these instructions](http://creative.colorado.edu/~schaal/web/pdf/creative-server-instructions.pdf) for connecting to the Creative Server. 
