--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -11,28 +11,43 @@ permalink: class-1
  + Class Introduction
  + Syllabus Overview
  + Intro to HTML
- + Server setup
+ + Hello World
 
 
 
 # CLASS NOTES
 
-<!-- **CSS** - controls how a page looks
+*Class notes will be posted after class.*
 
-**JAVASCRIPT** - controls how a page behaves
-
+<!-- **CSS** - controls how a page looks<br>
+**JAVASCRIPT** - controls how a page behaves<br>
 **HTML** - provides the essential structure and content of a web page
 
 
-HTML is a markup language. It’s not a programming language because it doesn’t understand logic; it simply contains information about the structure and display of a document. HTML is a type of XML, or Extensible Markup Language, which is just a more general markup language.
+HTML is a markup language. It’s not a programming language because it doesn’t understand logic; it simply contains information about the structure and display of a document. HTML contains information about the structure, content and display of a document.
 
-# Intro to Tags
+# HTML Tags
 
-HTML is made up of tags. Tags give information about the content and display of text. Tags are simply little pieces of text starting with the less-than sign (<) and ending with the greater-than sign (>).
+HTML is made up of tags. Tags give information about the content and display of text. Tags are simply little pieces of text starting with the less-than sign (<) and ending with the greater-than sign (>). Tags are used to mark up the start and end of an HTML element.
 
 {% highlight ruby %}
-<p>This is the tag for a paragraph</p>
+<p></p>
 {% endhighlight %}
+
+# HTML elements
+An element represents some kind of structure or semantics and generally consists of a start tag, content, and an end tag. This is a paragraph element:
+
+{% highlight ruby %}
+<p>This is the content of the paragraph element.</p>
+{% endhighlight %}
+
+#HTML attributes
+Some tags also have attributes associated with them, attributes define a property for an element. They appear in the start tag.
+
+{% highlight ruby %}
+<p lang='en'>This is the content of the paragraph element.</p>
+{% endhighlight %}
+
 
 # The Skeletal System
 There are a few main tags that every web page must have - html, head, title, and body. The very simplest web page looks like this in text view:
@@ -48,8 +63,8 @@ There are a few main tags that every web page must have - html, head, title, and
   <p>Some information here.</p>
  </body>
 </html>
-{% endhighlight %} -->
-
+{% endhighlight %}
+ -->
 
 
 <br>
