--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -19,7 +19,7 @@ permalink: class-1
 
 *Class notes will be posted after class.*
 
-<!-- **CSS** - controls how a page looks<br>
+**CSS** - controls how a page looks<br>
 **JAVASCRIPT** - controls how a page behaves<br>
 **HTML** - provides the essential structure and content of a web page
 
@@ -64,7 +64,7 @@ There are a few main tags that every web page must have - html, head, title, and
  </body>
 </html>
 {% endhighlight %}
- -->
+
 
 
 <br>
