updated notes for class 1

--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -8,8 +8,8 @@ permalink: class-1
 
 # TOPICS
 
- + Class Introduction
- + Syllabus Overview
+ + Class Intro
+ + Syllabus
  + Intro to HTML
  + Hello World
 
@@ -17,18 +17,13 @@ permalink: class-1
 
 # CLASS NOTES
 
-*Class notes will be posted after class.*
-<!-- 
-**CSS** - controls how a page looks<br>
-**JAVASCRIPT** - controls how a page behaves<br>
-**HTML** - provides the essential structure and content of a web page
+HTML, CSS and JavaScript are the core languages of the web - forming the backbone of all websites and web content.CSS controls how a page looks, JavaScript controls how a page behaves, and HTML provides the essential structure and content of a web page.
 
 
-HTML is a markup language. It’s not a programming language because it doesn’t understand logic; it simply contains information about the structure and display of a document. HTML contains information about the structure, content and display of a document.
+HTML is a markup language. It’s not a programming language because it doesn’t understand logic. HTML contains information about the structure, content and display of a document.
 
 # HTML Tags
-
-HTML is made up of tags. Tags give information about the content and display of text. Tags are simply little pieces of text starting with the less-than sign (<) and ending with the greater-than sign (>). Tags are used to mark up the start and end of an HTML element.
+HTML is made up of tags. Tags are used to mark up the content and give the browser information about how to display the text. Tags are simply short pieces of text starting with the less-than sign (<) and ending with the greater-than sign (>). Tags are used to mark up the start and end of an HTML element.
 
 {% highlight ruby %}
 <p></p>
@@ -65,7 +60,20 @@ There are a few main tags that every web page must have - html, head, title, and
 </html>
 {% endhighlight %}
 
- -->
+# Links
+One of the most improtant tags, the `<a>` tag, defines a hyperlink, which is used to link from one page to another. The most important attribute of the `<a>` element is the href attribute, which indicates the link's destination.
+
+{% highlight ruby %}
+<a href="http://www.w3schools.com">Visit W3Schools.com!</a>
+{% endhighlight %}
+
+The a tag requires an attribute of ‘href’, which is short for hyperlink reference — this is where you put the URL of the link. You can link to a page on your own site or to an external page.
+
+# More Tags
+Some of the tags we talked about in class: `<p>`, `<h1>` to `<h6>`, `<img>`, `<ul>`, `<ol>`, `<li>`, `<strong>`, `<em>`, `<u>`
+
+For a complete list of all HTML tags, see the [w3school's HTML Element Reference](http://www.w3schools.com/tags/).
+
 
 <br>
 
@@ -74,10 +82,19 @@ There are a few main tags that every web page must have - html, head, title, and
 <br>
 
 # ASSIGNMENT #1: 'Hello World'
-Create a basic one page html document that displays "hello world" and make it live on the web. Save your page as hello-world.html.
++ Create a basic one page html document that displays "hello world" and uses at least **12 different kinds of tags**. You may re-use tags as many times as you want, but you must use at least 12 unique tags within your page. Save your page as hello-world.html.
 
-Download a code editor, an FTP client, and the CU VPN client. Follow [these instructions](http://creative.colorado.edu/~schaal/web/pdf/creative-server-instructions.pdf) for connecting to the Creative Server. 
++ Download a code editor (I recommend Sublime Text 2), an FTP client, and the CU VPN client. Follow [these instructions](http://creative.colorado.edu/~schaal/web/pdf/creative-server-instructions.pdf) for connecting to the Creative Server. 
 
-Upload your web page to your web directory (web folder inside the public_html directory) on the creative server
++ Upload your hello-world.html page to your web directory (web folder inside the public_html directory) on the creative server.
 
-The purpose of the project is to set up your off-campus work/coding environment.
++ The purpose of the project is to get you comfortable writing HTML tags, and to get your off-campus work/coding environment setup.
+
+**Assignment #1 is due before class on 1/20.**
+
+<br>
+
+# READING
+Read [As We May Think, by Vannevar Bush](http://www.theatlantic.com/magazine/archive/1945/07/as-we-may-think/303881/) and read [Long Live the Web, by Tim Berners-Lee](http://ariellehein.com/readings/Berners-Lee-Long-Live-The-Web.pdf).
+
+Both readings should be completed prior to class on 1/20. Be prepared to discuss the reading in class that day. 
