updated notes for class 1

--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -67,7 +67,7 @@ One of the most improtant tags, the `<a>` tag, defines a hyperlink, which is use
 <a href="http://www.w3schools.com">Visit W3Schools.com!</a>
 {% endhighlight %}
 
-The a tag requires an attribute of ‘href’, which is short for hyperlink reference — this is where you put the URL of the link. You can link to a page on your own site or to an external page.
+The `<a>` tag requires an attribute of ‘href’, which is short for hyperlink reference — this is where you put the URL of the link. You can link to a page on your own site or to an external page.
 
 # More Tags
 Some of the tags we talked about in class: `<p>`, `<h1>` to `<h6>`, `<img>`, `<ul>`, `<ol>`, `<li>`, `<strong>`, `<em>`, `<u>`
