updating timeline and class 3 notes

--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -10,10 +10,11 @@ permalink: class-3
 # TOPICS
 
  + Server Structure
- + Links
+ + Relative Links
  + W3 Validator
  + Google Fonts
  + Font Awesome Icons
+ + HTML Forms, Tables
 
 
 # CLASS NOTES
