--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Class 3"
-date:   2016-01-18
+date:   2016-01-19
 categories: notes
 permalink: class-3
 ---
@@ -17,7 +17,7 @@ permalink: class-3
  + HTML Forms, Tables
 
 
-# CLASS NOTES
+<!-- # CLASS NOTES -->
 <!-- [HTML5 Notes](http://creative.colorado.edu/~schaal/web/pdf/web-html5.pdf) -->
 
 
@@ -28,29 +28,34 @@ permalink: class-3
 
 <br>
 
-# Project 1: Hypertext Narrative
+# Assignment 2: Assignment Portal
+
+Create a one page .html-based website which will be used to turn in all of your work throughout the semester. Each time a new homework assignment or project is due, you will upload it online and then create a hyperlink to that assignment or project on you Assignment Portal.
+
+Your now, your Assignment Portal will be fairly minimal but will be added to a redesigned throughout the semester. Name your .html file “index.html” and upload it to your server space into a new directory called “web”
+
+Your assignment portal URL will look something like this: ***http://creative.colorado.edu/~userName/web***
+
+You are required to use this assignment portal to link to all of your work throughout the semester. If assignments and projects are not linked to your assignment portal, they will not be accepted for credit. If you end up changing your assignment portal address at some point during the semester, you must email me and let me know.
+
+**Assignment 2 is due before class on 1/27**
+
+<!-- # Project 1: Hypertext Narrative
 Hypertext fiction is a genre of electronic literature, characterized by the use of hypertext links which provide a new context for non-linearity in literature and reader interaction
 
 Choose a popular children’s story, and without altering the text, redesign it as a non-linear narrative. Divide the story in multiple parts and place each part into a html page. Each page should have at 2-3 links to other segments. Infinite or Ending?
 
 Parameters
 
-html5 structure
-save the starting page as "hypertext-01.html"
-figure "title card" using placehold.it
-google fonts
-font awesome icons
-validate each page at validator.w3.org
+html5 structure<br>
+save the starting page as "hypertext-01.html"<br>
+figure "title card" using placehold.it<br>
+google fonts<br>
+font awesome icons<br>
+validate each page at validator.w3.org<br>
 upload the pages to the web directory of the creative server
 
-**Project 1 is due before class on 1/27**
+**Assignment 2 is due before class on 1/27** -->
 
-<!-- <br>
-
-# READING
-Read [As We May Think, by Vannevar Bush](http://www.theatlantic.com/magazine/archive/1945/07/as-we-may-think/303881/) and read [Long Live the Web, by Tim Berners-Lee](http://ariellehein.com/readings/Berners-Lee-Long-Live-The-Web.pdf).
-
-Both readings should be completed prior to class on 1/20. Be prepared to discuss the readings in class that day. 
- -->
 
 
