updating assignment instructions

--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -90,7 +90,7 @@ For a complete list of all HTML tags, see the [w3school's HTML Element Reference
 
 + The purpose of the project is to get you comfortable writing HTML tags, and to get your off-campus work/coding environment setup.
 
-**Assignment #1 is due before class on 1/20.**
+**Your assignment should be turned in via Edmodo; please just submit a URL to your 'Hello World' page. Assignment #1 is due before class on 1/20.**
 
 <br>
 
