--- a/_posts/2016-01-13-class-02.md
+++ b/_posts/2016-01-13-class-02.md
@@ -33,7 +33,7 @@ permalink: class-2
 
 + The purpose of the project is to get you comfortable writing HTML tags, and to get your off-campus work/coding environment setup.
 
-**Assignment #1 is due before class on 1/20.**
+**Your assignment should be turned in via Edmodo; please just submit a URL to your 'Hello World' page. Assignment #1 is due before class on 1/20.**
 
 <br>
 
