updating class 3 notes

--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -12,9 +12,10 @@ permalink: class-3
  + Server Structure
  + Relative Links
  + W3 Validator
- + Google Fonts
- + Font Awesome Icons
  + HTML Forms, Tables
+
+<!--  + Google Fonts
+ + Font Awesome Icons -->
 
 
 <!-- # CLASS NOTES -->
