updating homework assignment

--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -12,7 +12,7 @@ permalink: class-3
  + Server Structure
  + Relative Links
  + W3 Validator
- + HTML Forms, Tables
+ + HTML Structure
 
 <!--  + Google Fonts
  + Font Awesome Icons -->
@@ -31,15 +31,21 @@ permalink: class-3
 
 # Assignment 2: Assignment Portal
 
-Create a one page .html-based website which will be used to turn in all of your work throughout the semester. Each time a new homework assignment or project is due, you will upload it online and then create a hyperlink to that assignment or project on you Assignment Portal.
+Create a one page index.html website which will be used to link to all of your work throughout the semester. Each time a new homework assignment or project is due, you will upload it to the Creative server and then create a hyperlink to that page on you Assignment Portal. You also must submit each assignment on Edmodo.
 
-Your now, your Assignment Portal will be fairly minimal but will be added to a redesigned throughout the semester. Name your .html file “index.html” and upload it to your server space into a new directory called “web”
+Name your .html file “index.html” and upload it directly into your public_html directory on your server space.
 
-Your assignment portal URL will look something like this: ***http://creative.colorado.edu/~userName/web***
+Your assignment portal URL will look like this: ***http://creative.colorado.edu/~identikey***
 
 You are required to use this assignment portal to link to all of your work throughout the semester. If assignments and projects are not linked to your assignment portal, they will not be accepted for credit. If you end up changing your assignment portal address at some point during the semester, you must email me and let me know.
 
 **Assignment 2 is due before class on 1/27**
+
+# Reading
+Read Duckett HTML & CSS: chapters 1-5, 8
+
+<!-- # Recommended Videos -->
+
 
 <!-- # Project 1: Hypertext Narrative
 Hypertext fiction is a genre of electronic literature, characterized by the use of hypertext links which provide a new context for non-linearity in literature and reader interaction
