adding notes and updating timeline

--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -11,16 +11,88 @@ permalink: class-3
 
  + Server Structure
  + Relative Links
- + W3 Validator
- + HTML Structure
+ + index.html
+ + [W3 Validator](http://validator.w3.org/)
+ + [Google Web Fonts](https://www.google.com/fonts/)
+ + [Font Awesome Icons](http://fortawesome.github.io/Font-Awesome/)
 
-<!--  + Google Fonts
- + Font Awesome Icons -->
 
-
-<!-- # CLASS NOTES -->
+# CLASS NOTES
 <!-- [HTML5 Notes](http://creative.colorado.edu/~schaal/web/pdf/web-html5.pdf) -->
 
+Every page and every image on a website has a ***URL*** (or Uniform Resource Locator). <br>The URL is made up of the **domain name** followed by the **path** to that page or image.
+
+![url](img/url.png)
+
+# Site Structure & Navigation
++ Every page and every image on a website has a URL
++ Every website is built inside directories on a web server
++ Each web page is a separate file on that web server (ending in .html or .js)
++ Sometimes when you go to a URL, there is no file listed in the URL 
++ For example, we type: [colorado.edu](http://www.colorado.edu) instead of [colorado.edu/index.html](colorado.edu/index.html)
+
+#index.html
+This is default HTML file that appears in a browser when a user invokes a URL, it is the main homepage of a site. Every directory should have an index.html page for usability and security purposes.
+
+#Writing Links
+Links are created using the `<a>` element; users can click on anything between the opening `<a>` tag and the closing `</a>` tag. You specify which page you want to link to using the `href=""` attribute.
+
+#Absolute Links
+A hyperlink containing a full URL, which includes all the information needed to find a particular site, page or document or other addressable item on the Internet. This information includes the protocol to use, such as HTTP (Hypertext Transfer Protocol) or FTP (File Transfer Protocol).
+
+{% highlight html %}
+<a href="http://www.colorado.edu/">Colorado.edu</a>
+{% endhighlight %}
+
+#Relative Links
+Used when linking to pages within your own website. they provide a shorthand way of telling the browser where to find your files. If you are linking to a page within your own site, it is best to use relative links rather than absolute links or qualified URLS.
+
+{% highlight html %}
+<a href="music/listings.html">Listings</a>
+{% endhighlight %}
+
+To move **IN** a directory, use a backslash `/` notation, the directory name and the file name:
+{% highlight html %}
+movies/cinema/listings.html
+{% endhighlight %}
+
+To move OUT a directory, use the following notation:  `../`
+{% highlight html %}
+../../index.html
+{% endhighlight %}
+
+#Google Web Fonts
+Visit [google.com/fonts](https://www.google.com/fonts) and choose a font to use, then click the middle button (the quick use option). Follow their directions:
+
+1. Choose the style you want
+2. Choose the character set you want (you can usually skip this)
+3. Add the link code inside the head tags of your html page
+4. Integrate your css - either on an external stylesheet or within a style tag within the html code
+
+On your .html page, you will have something like this in the `<head>` tag:
+{% highlight html %}
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+{% endhighlight %}
+
+And you will add the css within a `<style>` tag on the html page or on an external .css stylesheet:
+{% highlight html %}
+<style>
+	body {
+		font-family: 'Open Sans', sans-serif;
+	}
+</style>
+{% endhighlight %}
+
+#Font Awesome Icons
+Paste the following code into the `<head>` section of your site's HTML. This link can also be found on the [Get Started Page](http://fortawesome.github.io/Font-Awesome/get-started/) on Font Awesome.
+{% highlight html %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+{% endhighlight %}
+
+Then, choose what icon you want to use and just copy and paste the code in your html. It will look something like this:
+{% highlight html %}
+<i class="fa fa-fort-awesome"></i>
+{% endhighlight %}
 
 
 <br>
@@ -42,7 +114,9 @@ You are required to use this assignment portal to link to all of your work throu
 **Assignment 2 is due before class on 1/27**
 
 # Reading
-Read Duckett HTML & CSS: chapters 1-5, 8
+Review Duckett HTML & CSS: chapters 1-5, 8
+
+Be prepared to discuss the reading from last week - [As We May Think, by Vannevar Bush](http://www.theatlantic.com/magazine/archive/1945/07/as-we-may-think/303881/) and [Long Live the Web, by Tim Berners-Lee](http://ariellehein.com/readings/Berners-Lee-Long-Live-The-Web.pdf).
 
 <!-- # Recommended Videos -->
 
