adding notes and updating timeline

--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -22,7 +22,7 @@ permalink: class-3
 
 Every page and every image on a website has a ***URL*** (or Uniform Resource Locator). <br>The URL is made up of the **domain name** followed by the **path** to that page or image.
 
-![url](img/url.png)
+![url]({{ site.url }}/img/url.png)
 
 # Site Structure & Navigation
 + Every page and every image on a website has a URL
@@ -114,7 +114,7 @@ You are required to use this assignment portal to link to all of your work throu
 **Assignment 2 is due before class on 1/27**
 
 # Reading
-Review Duckett HTML & CSS: chapters 1-5, 8
+Review Duckett HTML & CSS: chapters 1-5, 8 by 1/27
 
 Be prepared to discuss the reading from last week - [As We May Think, by Vannevar Bush](http://www.theatlantic.com/magazine/archive/1945/07/as-we-may-think/303881/) and [Long Live the Web, by Tim Berners-Lee](http://ariellehein.com/readings/Berners-Lee-Long-Live-The-Web.pdf).
 
