--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -20,9 +20,9 @@ permalink: class-3
 # CLASS NOTES
 <!-- [HTML5 Notes](http://creative.colorado.edu/~schaal/web/pdf/web-html5.pdf) -->
 
-Every page and every image on a website has a ***URL*** (or Uniform Resource Locator). <br>The URL is made up of the **domain name** followed by the **path** to that page or image.
+Every page and every image on a website has a ***URL*** (or Uniform Resource Locator). <br>The URL is made up of the **domain name** such as `creative.colorado.edu` followed by the **path** to that page or image, like /~identikey/my-page.html. The complete URL would look like: `creative.colorado.edu/~identikey/my-page.html`
 
-![url]({{ site.url }}/img/url.png)
+<!-- ![url]({{ site.url }}/img/url.png) -->
 
 # Site Structure & Navigation
 + Every page and every image on a website has a URL
