--- a/_posts/2016-01-20-class-03.md
+++ b/_posts/2016-01-20-class-03.md
@@ -29,7 +29,7 @@ Every page and every image on a website has a ***URL*** (or Uniform Resource Loc
 + Every website is built inside directories on a web server
 + Each web page is a separate file on that web server (ending in .html or .js)
 + Sometimes when you go to a URL, there is no file listed in the URL 
-+ For example, we type: [colorado.edu](http://www.colorado.edu) instead of [colorado.edu/index.html](colorado.edu/index.html)
++ For example, we type: `colorado.edu` instead of `colorado.edu/index.html`
 
 #index.html
 This is default HTML file that appears in a browser when a user invokes a URL, it is the main homepage of a site. Every directory should have an index.html page for usability and security purposes.
