--- a/_posts/2016-01-25-class-04.md
+++ b/_posts/2016-01-25-class-04.md
@@ -16,6 +16,33 @@ permalink: class-4
 
 # CLASS NOTES
 
+#HTML video tag
+{% highlight html %}
+<video width="320" height="240" controls>
+	<source src="movie.mp4" type="video/mp4">
+	<source src="movie.ogg" type="video/ogg">
+	Your browser does not support the video tag.
+</video>
+{% endhighlight %}
+
+The controls attribute adds video controls, like play, pause, and volume.
+
+It is a good idea to always include width and height attributes.
+
+If height and width are not set, the browser does not know the size of the video. The effect will be that the page will change (or flicker) while the video loads.
+
+
+#HTML audio tag
+{% highlight html %}
+<audio controls>
+	<source src="audio.ogg" type="audio/ogg">
+	<source src="audio.mp3" type="audio/mpeg">
+	Your browser does not support the audio tag.
+</audio>
+{% endhighlight %}
+
+
+
 
 
 <br>
