--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -63,7 +63,7 @@ There are a few main tags that every web page must have - html, head, title, and
 # Links
 One of the most improtant tags, the `<a>` tag, defines a hyperlink, which is used to link from one page to another. The most important attribute of the `<a>` element is the href attribute, which indicates the link's destination.
 
-{% highlight ruby %}
+{% highlight htmls %}
 <a href="http://www.w3schools.com">Visit W3Schools.com!</a>
 {% endhighlight %}
 
