--- a/_posts/2016-01-11-class-01.md
+++ b/_posts/2016-01-11-class-01.md
@@ -25,21 +25,21 @@ HTML is a markup language. It’s not a programming language because it doesn’
 # HTML Tags
 HTML is made up of tags. Tags are used to mark up the content and give the browser information about how to display the text. Tags are simply short pieces of text starting with the less-than sign (<) and ending with the greater-than sign (>). Tags are used to mark up the start and end of an HTML element.
 
-{% highlight ruby %}
+{% highlight html %}
 <p></p>
 {% endhighlight %}
 
 # HTML elements
 An element represents some kind of structure or semantics and generally consists of a start tag, content, and an end tag. This is a paragraph element:
 
-{% highlight ruby %}
+{% highlight html %}
 <p>This is the content of the paragraph element.</p>
 {% endhighlight %}
 
 #HTML attributes
 Some tags also have attributes associated with them, attributes define a property for an element. They appear in the start tag.
 
-{% highlight ruby %}
+{% highlight html %}
 <p lang='en'>This is the content of the paragraph element.</p>
 {% endhighlight %}
 
@@ -63,7 +63,7 @@ There are a few main tags that every web page must have - html, head, title, and
 # Links
 One of the most improtant tags, the `<a>` tag, defines a hyperlink, which is used to link from one page to another. The most important attribute of the `<a>` element is the href attribute, which indicates the link's destination.
 
-{% highlight htmls %}
+{% highlight html %}
 <a href="http://www.w3schools.com">Visit W3Schools.com!</a>
 {% endhighlight %}
 
