--- a/_posts/2016-01-25-class-04.md
+++ b/_posts/2016-01-25-class-04.md
@@ -17,6 +17,8 @@ permalink: class-4
 # CLASS NOTES
 
 #HTML video tag
+
+Supporting multiple formats:
 {% highlight html %}
 <video width="320" height="240" controls>
 	<source src="movie.mp4" type="video/mp4">
@@ -33,6 +35,8 @@ If height and width are not set, the browser does not know the size of the video
 
 
 #HTML audio tag
+
+Supporting multiple formats:
 {% highlight html %}
 <audio controls>
 	<source src="audio.ogg" type="audio/ogg">
