updating for class 8

--- a/_posts/2016-02-03-css-notes.md
+++ b/_posts/2016-02-03-css-notes.md
@@ -52,3 +52,7 @@ The name of the property is followed by a colon, then the value of the property.
 + background-color
 + border
 
+# Colors in CSS
+Colors in CSS can be expressed in hexadecimal (as in **#ff3366**) or RGB (as in rgb(255,51,102) ) values. To find hexadecimal and RGB values for color, see this color picker.
+
+Colors can be applied to many different properties. Here’s an example of tags with background and border colors:
