adding assignment 8, updating timeline

--- a/_posts/2016-01-25-class-04.md
+++ b/_posts/2016-01-25-class-04.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Class 4"
+title:  "HTML Audio & Video Tag"
 date:   2016-01-24
 categories: notes
 permalink: class-4
@@ -44,26 +44,3 @@ Supporting multiple formats:
 	Your browser does not support the audio tag.
 </audio>
 {% endhighlight %}
-
-
-
-
-
-<br>
-
----
-
-<br>
-
-
-# Assignment 2: Assignment Portal
-
-Create a one page index.html website which will be used to link to all of your work throughout the semester. Each time a new homework assignment or project is due, you will upload it to the Creative server and then create a hyperlink to that page on you Assignment Portal. You also must submit each assignment on Edmodo.
-
-Name your .html file “index.html” and upload it directly into your public_html directory on your server space.
-
-Your assignment portal URL will look like this: ***http://creative.colorado.edu/~identikey***
-
-You are required to use this assignment portal to link to all of your work throughout the semester. If assignments and projects are not linked to your assignment portal, they will not be accepted for credit. If you end up changing your assignment portal address at some point during the semester, you must email me and let me know.
-
-**Assignment 2 is due before class on 1/27**
