--- a/_posts/2016-02-21-class-12.md
+++ b/_posts/2016-02-21-class-12.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Class 12"
+title:  "CSS Positioning"
 date:   2016-02-21
 categories: notes
-permalink: class-12
+permalink: css-positioning
 ---
 
 # Helpful Links
