adding projects, extra credit and slides

--- a/_posts/2016-03-28-js.md
+++ b/_posts/2016-03-28-js.md
@@ -3,8 +3,10 @@ layout: post
 title:  "Intro to Javascript"
 date:   2016-03-27
 categories: notes
-permalink: intro to javascript
+permalink: js-intro
 ---
+
+[SLIDES: Introduction to Javascript](/web-spring-16/resources/web-slides-3-28.pdf)
 
 # Where and How to add Javascript to web pages
 
