adding js message demo

--- a/_posts/2016-03-28-js.md
+++ b/_posts/2016-03-28-js.md
@@ -8,6 +8,8 @@ permalink: js-intro
 
 [SLIDES: Introduction to Javascript](/web-spring-16/resources/web-slides-3-28.pdf)
 
+[download](/web-spring-16/resources/js-messages.zip) finished Javascript Messages demo
+
 # Where and How to add Javascript to web pages
 
 Link a JavaScript file to a web page using the `<script>` tag and the src property: 
