--- a/_posts/2016-03-28-js.md
+++ b/_posts/2016-03-28-js.md
@@ -8,7 +8,7 @@ permalink: js-intro
 
 [SLIDES: Introduction to Javascript](/web-spring-16/resources/web-slides-3-28.pdf)
 
-[download](/web-spring-16/resources/js-messages.zip) finished Javascript Messages demo
+[Download](/web-spring-16/resources/js-messages.zip) the finished Javascript Messages demo from class
 
 # Where and How to add Javascript to web pages
 
