--- a/_posts/2016-03-29-events.md
+++ b/_posts/2016-03-29-events.md
@@ -6,7 +6,7 @@ categories: notes
 permalink: event-listeners
 ---
 
-The advantage of a front end language like javascript (in fact, javascript is really the only browser-based language we have) is that you can respond immediately to a user’s actions. Javascript calls these “events”. An event could be a mouse move, a scroll, a key press, and many others. Here’s a list of the [major Javascript events](http://www.quirksmode.org/js/events_events.html). Notice that not all of them are supported in all browsers.
+The advantage of a front end language like javascript (in fact, javascript is really the only browser-based language we have) is that you can respond immediately to a user’s actions. Javascript calls these “events”. An event could be a mouse move, a scroll, a key press, and many others. Here’s a list of the [major Javascript events](http://www.quirksmode.org/dom/events/index.html). Notice that not all of them are supported in all browsers.
 
 Javascript won’t tell you automatically when events happen; you have to register an Event Listener to pay attention to that particular event — to “listen for” a mouse click, for example. When you create an event listener, you then define a function which will fire when the even happens.
 
